Fixed bug #69125 (Array numeric string as key)